--- a/src/gui/layout.fxml
+++ b/src/gui/layout.fxml
@@ -9,24 +9,16 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<VBox id="root" alignment="CENTER" minHeight="400.0"
-	minWidth="600.0" xmlns="http://javafx.com/javafx/8"
-	xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="gui.LayoutController">
-	<children>
-		<ScrollPane fitToHeight="true" fitToWidth="true"
-			maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-			prefViewportHeight="350.0" prefViewportWidth="600.0"
-			VBox.vgrow="ALWAYS">
+
+<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.LayoutController">
+   <children>
+		<Label fx:id="error" alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="301.0" layoutY="167.0" styleClass="error" AnchorPane.bottomAnchor="4.0" />
+		<ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="348.0" prefWidth="602.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS">
 			<content>
-				<StackPane id="yield" fx:id="yield" 
-					maxHeight="1.7976931348623157E308"
-					maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+				<StackPane id="yield" fx:id="yield" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
 
 				</StackPane>
 			</content>
 		</ScrollPane>
-		<Label fx:id="error" alignment="BOTTOM_CENTER"
-			contentDisplay="CENTER" styleClass="error" translateY="-20.0" />
-	</children>
-</VBox>
+   </children>
+</AnchorPane>
