--- a/src/gui/style.css
+++ b/src/gui/style.css
@@ -10,7 +10,7 @@
 
 #root {
 	-fx-font-family: "Open Sans";
-	-fx-text-fill: #eee;
+	-fx-text-fill: #eeeeee;
 	-fx-background-color: #0e1f2b;
 }
 
@@ -22,7 +22,7 @@ ScrollPane, GridPane, Pane, StackPane {
 Label {
 	-fx-padding: 4px 0 4px 0;
 	-fx-font-size: 16px;
-	-fx-text-fill: #eee;
+	-fx-text-fill: #eeeeee;
 }
 
 Label.error {
@@ -31,21 +31,29 @@ Label.error {
 	-fx-font-family: "Open Sans";
 }
 
-#yield Label.light, 
-#yield Label.title, 
-#yield Label.title2 {
+Label.grey {
+	-fx-text-fill: #aaaaaa;
+}
+
+Label.light, 
+Label.title, 
+Label.title2 {
 	-fx-font-family: "Open Sans Light";
 }
-#yield Label.title{
+Label.title{
 	-fx-font-size: 34px;
 }
-#yield Label.title2{
+Label.title2{
 	-fx-font-size: 28px;
 }
 
-#yield Label.italic {
+Label.italic {
 	-fx-font-style: italic ;
 	-fx-font-family: "Open Sans Italic";
+}
+
+Label.link {
+	-fx-text-fill: #328cbc;
 }
 
 #yield {
@@ -55,9 +63,9 @@ Label.error {
 
 Button {
 	-fx-background-color: #636d72;
-	-fx-text-fill: #eee;
+	-fx-text-fill: #eeeeee;
 	-fx-padding: 8px 24px;
-	-fx-border-color: #eee;
+	-fx-border-color: #eeeeee;
 	-fx-border-radius: 3px;
 	-fx-cursor: hand;
 }
@@ -72,4 +80,8 @@ Button:pressed {
 
 .yielded {
 	
+}
+
+.movie-card {
+	-fx-background-color: #444;
 }
