--- a/src/gui/components/MovieCard.fxml
+++ b/src/gui/components/MovieCard.fxml
@@ -7,32 +7,32 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<VBox prefWidth="160.0" styleClass="movie-card" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxWidth="180.0" prefWidth="180.0" styleClass="movie-card" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane prefWidth="120.0" VBox.vgrow="ALWAYS">
+      <Pane maxWidth="180.0" prefWidth="180.0" VBox.vgrow="NEVER">
          <children>
-            <ImageView fx:id="cover" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="cover" fitWidth="180.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </Pane>
-      <FlowPane prefWidth="200.0" VBox.vgrow="NEVER">
+      <FlowPane maxWidth="180.0" prefWidth="180.0" prefWrapLength="160.0" VBox.vgrow="NEVER">
          <children>
-            <Label fx:id="title" text="Thor: Ragnarok" />
-            <Label fx:id="year" styleClass="grey" text="(2017)" textFill="#b2afaf" />
+            <Label fx:id="title" maxWidth="164.0" prefWidth="164.0" text="Rogue One: A StarWars Story" wrapText="true" />
+            <Label fx:id="year" maxWidth="144.0" styleClass="grey" text="(2017)" />
          </children>
          <padding>
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
          </padding>
       </FlowPane>
-      <FlowPane prefWidth="200.0" VBox.vgrow="NEVER">
+      <FlowPane alignment="BOTTOM_LEFT" maxWidth="180.0" prefWidth="180.0" styleClass="smaller" VBox.vgrow="ALWAYS">
          <children>
-            <Label styleClass="grey" text="By: " />
-            <Label fx:id="director" styleClass="link" text="Taika Waititi" />
+            <Label styleClass="grey" text="By: " wrapText="true" />
+            <Label fx:id="director" maxWidth="164.0" styleClass="link" text="Taika Waititi" wrapText="true" />
          </children>
          <padding>
             <Insets bottom="8.0" left="8.0" right="8.0" />
          </padding>
       </FlowPane>
-      <HBox fx:id="rating" prefHeight="24.0" prefWidth="200.0" VBox.vgrow="NEVER">
+      <HBox fx:id="rating" alignment="BOTTOM_CENTER" maxWidth="180.0" prefHeight="24.0" prefWidth="180.0" spacing="10.0" VBox.vgrow="NEVER">
          <children>
             <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                <image>
