fixed error not showing up and white gap (finally)

--- a/bin/gui/layout.fxml
+++ b/bin/gui/layout.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.LayoutController">
+<AnchorPane fx:id="root" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.LayoutController">
    <children>
 		<Label fx:id="error" alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="301.0" layoutY="167.0" styleClass="error" AnchorPane.bottomAnchor="4.0" />
 		<ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="348.0" prefWidth="602.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS">
