--- a/bin/gui/layout.fxml
+++ b/bin/gui/layout.fxml
@@ -11,7 +11,6 @@
 
 <AnchorPane fx:id="root" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.LayoutController">
    <children>
-		<Label fx:id="error" alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="301.0" layoutY="167.0" styleClass="error" AnchorPane.bottomAnchor="4.0" />
 		<ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="348.0" prefWidth="602.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS">
 			<content>
 				<StackPane id="yield" fx:id="yield" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
@@ -19,5 +18,6 @@
 				</StackPane>
 			</content>
 		</ScrollPane>
+		<Label fx:id="error" alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="301.0" layoutY="167.0" styleClass="error" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" />
    </children>
 </AnchorPane>
