--- a/src/gui/login/login.fxml
+++ b/src/gui/login/login.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -11,8 +15,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="436.0" prefWidth="522.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" prefHeight="436.0" prefWidth="522.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
+      <Pane VBox.vgrow="ALWAYS" />
       <HBox alignment="CENTER">
          <children>
             <GridPane alignment="CENTER" hgap="20.0" vgap="20.0">
@@ -24,7 +29,6 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
@@ -33,8 +37,7 @@
                         <Label text="Password:" GridPane.rowIndex="2" />
                         <TextField fx:id="username" onAction="#btnClick" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                         <PasswordField fx:id="password" onAction="#btnClick" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label fx:id="error" maxWidth="-Infinity" prefWidth="288.0" text="" wrapText="true" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-                        <Button mnemonicParsing="false" onAction="#btnClick" text="LOGIN" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+                        <Button mnemonicParsing="false" onAction="#btnClick" text="LOGIN" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
                      </children>
                      <opaqueInsets>
                         <Insets />
@@ -44,6 +47,18 @@
                      </padding>
                   </GridPane>
          </children>
+      </HBox>
+      <HBox alignment="BOTTOM_RIGHT" minHeight="33.0" prefHeight="33.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+         <children>
+            <Button mnemonicParsing="false" styleClass="secondary" text="REGISTER">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </Button>
+         </children>
+         <padding>
+            <Insets right="16.0" />
+         </padding>
       </HBox>
    </children>
 </VBox>
