--- a/bin/gui/layout.fxml
+++ b/bin/gui/layout.fxml
@@ -18,6 +18,6 @@
 				</StackPane>
 			</content>
 		</ScrollPane>
-		<Label fx:id="error" alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="301.0" layoutY="167.0" styleClass="error" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" />
+		<Label fx:id="error" alignment="BOTTOM_CENTER" contentDisplay="CENTER" layoutX="301.0" layoutY="167.0" mouseTransparent="true" styleClass="error" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" />
    </children>
 </AnchorPane>
