--- a/src/gui/components/MovieCard.fxml
+++ b/src/gui/components/MovieCard.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<VBox maxWidth="180.0" prefWidth="180.0" styleClass="movie-card" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="card_root" maxWidth="180.0" prefWidth="180.0" styleClass="movie-card" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <StackPane>
          <children>
