--- a/src/gui/movie/movie.fxml
+++ b/src/gui/movie/movie.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
@@ -7,20 +8,40 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<VBox alignment="CENTER" prefHeight="439.0" prefWidth="565.0" styleClass="background" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" prefHeight="411.0" prefWidth="701.0" spacing="16.0" styleClass="background" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="16.0">
          <children>
-            <ImageView fitHeight="305.0" fitWidth="206.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER" />
-            <VBox prefHeight="200.0" prefWidth="100.0" spacing="8.0" HBox.hgrow="ALWAYS">
+            <ImageView fx:id="cover" fitHeight="305.0" fitWidth="206.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER" />
+            <VBox spacing="8.0" HBox.hgrow="ALWAYS">
                <children>
-                  <Label styleClass="title" text="Thor: Ragnarok" />
-                  <HBox>
+                  <HBox alignment="CENTER">
+                     <children>
+                        <ImageView fx:id="back" fitHeight="48.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" styleClass="pointer">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <image>
+                              <Image url="@../images/back.png" />
+                           </image>
+                        </ImageView>
+                        <Label fx:id="title" styleClass="title" text="Thor: Ragnarok" />
+                        <Pane HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="checked" fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true" styleClass="pointer">
+                           <image>
+                              <Image url="@../images/check.dark.png" />
+                           </image>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </ImageView>
+                     </children>
+                  </HBox>
+                  <HBox maxWidth="450.0">
                      <children>
                         <HBox alignment="CENTER" spacing="10.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label text="80%" />
+                              <Label fx:id="imdb" text="80%" />
                               <ImageView fitHeight="24.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../images/imdb.s.png" />
@@ -30,7 +51,7 @@
                         </HBox>
                         <HBox alignment="CENTER" spacing="10.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label text="76%" />
+                              <Label fx:id="mc" text="76%" />
                               <ImageView fitHeight="24.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../images/metacritic.s.png" />
@@ -40,7 +61,7 @@
                         </HBox>
                         <HBox alignment="CENTER" spacing="10.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label text="94%" />
+                              <Label fx:id="rt" text="94%" />
                               <ImageView fitHeight="24.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../images/rt.s.png" />
@@ -50,7 +71,7 @@
                         </HBox>
                         <HBox alignment="CENTER" spacing="10.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label text="92%" />
+                              <Label fx:id="rta" text="92%" />
                               <ImageView fitHeight="24.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../images/rt_audience.s.png" />
@@ -60,11 +81,12 @@
                         </HBox>
                      </children>
                   </HBox>
-                  <Label text="In Marvel Studios' &quot;Thor: Ragnarok,&quot; Thor is imprisoned on the other side of the universe without his mighty hammer and finds himself in a race against time to get back to Asgard to stop Ragnarok--the destruction of his homeworld and the end of Asgardian civilization--at the hands of an all-powerful new threat, the ruthless Hela. But first he must survive a deadly gladiatorial contest that pits him against his former ally and fellow Avenger--the Incredible Hulk!" wrapText="true" />
+                  <Label fx:id="description" text="In Marvel Studios' &quot;Thor: Ragnarok,&quot; Thor is imprisoned on the other side of the universe without his mighty hammer and finds himself in a race against time to get back to Asgard to stop Ragnarok--the destruction of his homeworld and the end of Asgardian civilization--at the hands of an all-powerful new threat, the ruthless Hela. But first he must survive a deadly gladiatorial contest that pits him against his former ally and fellow Avenger--the Incredible Hulk!" wrapText="true" />
                </children>
             </VBox>
          </children>
       </HBox>
+      <FlowPane fx:id="actors" hgap="8.0" vgap="8.0" />
    </children>
    <padding>
       <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
