--- a/src/gui/home/HomeView.fxml
+++ b/src/gui/home/HomeView.fxml
@@ -16,7 +16,7 @@
                   <Image url="@../images/add.png" />
                </image>
             </ImageView>
-            <TextField styleClass="large" HBox.hgrow="ALWAYS" />
+            <TextField promptText="Search your watchlist" styleClass="large" HBox.hgrow="ALWAYS" />
             <ImageView fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true" smooth="true" styleClass="pointer">
                <image>
                   <Image url="@../images/search.png" />
